<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dia_ciclo"
            android:fontFamily="@font/bricolage_grotesque_bold"
            android:paddingHorizontal="20dp"
            android:paddingVertical="8dp"
            android:text="@string/titulo_calma"
            android:textColor="@color/textos"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/rosa_intermedio"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bricolage_grotesque_bold"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/desc_calma"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:lineSpacingExtra="4dp" />
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/ivFlorEstatica"
            android:layout_width="411dp"
            android:layout_height="219dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/flor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNecesitoPaz"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/rosa_oscuro"
            android:paddingHorizontal="40dp"
            android:text="@string/btn_paz"
            android:textAppearance="@style/ChipTextAppearance"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="16dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>