<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dia_ciclo"
            android:fontFamily="@font/bricolage_grotesque_bold"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/titulo_probabilidad"
            android:textColor="@color/textos"
            android:textSize="18sp" />

        <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/ivFondoOvulo"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/ovulito_sin_cara"
            android:scaleType="fitCenter" />

            <ImageView
                android:id="@+id/ivImagenBebe"
                android:layout_width="280dp"
                android:layout_height="283dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/bebe" />

    </FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHinchazon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#8D5B5B"
                app:cardCornerRadius="32dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="98dp"
                        android:layout_height="80dp"
                        android:src="@drawable/hinchazon" />

                    <TextView
                        android:id="@+id/tv_articulo_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/dia_ciclo"
                        android:fontFamily="@font/bricolage_grotesque_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/articulo_hinchazon"
                        android:textColor="@color/textos"
                        android:textSize="12sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardParanoia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#8D5B5B"
                app:cardCornerRadius="32dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="119dp"
                        android:layout_height="80dp"
                        android:src="@drawable/paranoia" />

                    <TextView
                        android:id="@+id/tv_articulo_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/dia_ciclo"
                        android:fontFamily="@font/bricolage_grotesque_bold"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/articulo_paranoia"
                        android:textColor="@color/textos"
                        android:textSize="12sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>